staging/next-demo-yt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-dep
  namespace: next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: next
          image: xanderflinn/next-yt:e42f477ef81957faa9d562d0bc747885fe6de295
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-file
              readOnly: true
              mountPath: "/app/.env"
              subPath: .env
      volumes:
        - name: env-file
          secret:
            secretName: next-secret
