staging/next-demo-yt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: next-svc
  namespace: next
spec:
  selector:
    app: next-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
