staging/next-demo-yt/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  namespace: next
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-svc
                port:
                  number: 80
